--- a/Gestion du son/PjtKEIL_StepSon/StepSon.uvprojx
+++ b/Gestion du son/PjtKEIL_StepSon/StepSon.uvprojx
@@ -388,6 +388,11 @@
               <FileType>1</FileType>
               <FilePath>.\Src\principal.c</FilePath>
             </File>
+            <File>
+              <FileName>GestionSon.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Src\GestionSon.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -407,6 +412,11 @@
               <FileName>DriverJeuLaser.lib</FileName>
               <FileType>4</FileType>
               <FilePath>.\Driver\DriverJeuLaser.lib</FilePath>
+            </File>
+            <File>
+              <FileName>DriverJeuLaser.inc</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Driver\DriverJeuLaser.inc</FilePath>
             </File>
           </Files>
         </Group>
@@ -812,6 +822,11 @@
               <FileType>1</FileType>
               <FilePath>.\Src\principal.c</FilePath>
             </File>
+            <File>
+              <FileName>GestionSon.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Src\GestionSon.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -831,6 +846,11 @@
               <FileName>DriverJeuLaser.lib</FileName>
               <FileType>4</FileType>
               <FilePath>.\Driver\DriverJeuLaser.lib</FilePath>
+            </File>
+            <File>
+              <FileName>DriverJeuLaser.inc</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Driver\DriverJeuLaser.inc</FilePath>
             </File>
           </Files>
         </Group>
@@ -1305,6 +1325,11 @@
               <FileType>1</FileType>
               <FilePath>.\Src\principal.c</FilePath>
             </File>
+            <File>
+              <FileName>GestionSon.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Src\GestionSon.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -1324,6 +1349,11 @@
               <FileName>DriverJeuLaser.lib</FileName>
               <FileType>4</FileType>
               <FilePath>.\Driver\DriverJeuLaser.lib</FilePath>
+            </File>
+            <File>
+              <FileName>DriverJeuLaser.inc</FileName>
+              <FileType>5</FileType>
+              <FilePath>.\Driver\DriverJeuLaser.inc</FilePath>
             </File>
           </Files>
         </Group>
